<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/opcion1"
        android:title="@string/opcion1"
        android:icon="@drawable/icono_menu"
        android:enabled="false"
        android:checkable="false"
        android:visible="false" />
    <item
        android:id="@+id/opcion2"
        android:title="@string/opcion2"
        android:icon="@drawable/icono_menu"/>
    <item
        android:id="@+id/opcion3"
        android:title="@string/opcion3"
        android:icon="@drawable/icono_menu"/>
    <item
        android:id="@+id/opcion4"
        android:title="@string/opcion4"
        android:icon="@drawable/icono_menu"/>
    <menu>
        <item
            android:id="@+id/opcion5"
            android:title="@string/opcion5" />
        <item
            android:id="@+id/opcion6"
            android:title="@string/opcion6" />
        <item
            android:id="@+id/opcion7"
            android:title="@string/opcion7" />
    </menu>
</menu>
